--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -55,7 +55,7 @@
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">ＤＯＲＡＢＡＣＡ</a>
-          and <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>
+          and <a href="http://getbootstrap.com" target="_blank">ＤＯＲＡＢＡＣＡ</a>
         </p>
       </footer>
 
